--- a/app/src/main/res/layout/activity_massages.xml
+++ b/app/src/main/res/layout/activity_massages.xml
@@ -8,10 +8,10 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/linearLayout4"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="44dp"
         android:background="@color/DarkBlue100"
         android:orientation="horizontal"
         android:layout_marginBottom="10dp"
@@ -20,23 +20,38 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/backBtn"
+            android:layout_width="22dp"
+            android:layout_height="16dp"
             android:layout_marginStart="10dp"
             app:tint="@color/DarkBlue500"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="10dp"
-            android:src="@drawable/back_button" />
+            android:layout_centerVertical="true"
+            android:scaleX="-1"
+            android:src="@drawable/angle_right" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginStart="14dp"
+            android:layout_centerVertical="true"
             android:text="Massages and Requests"
+            android:layout_toRightOf="@+id/backBtn"
             android:textColor="@color/DarkBlue500"
             android:textSize="16sp"/>
-    </LinearLayout>
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/waiting"
+            app:tint="@color/DarkBlue300"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:clickable="true"
+            android:layout_marginEnd="24dp"
+            android:scaleX="-1"
+            />
+
+    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/no_massages_view"
