--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,8 +11,7 @@
         android:id="@+id/relativeLayout1"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@drawable/home_upper_corner_round_white"
-        android:backgroundTint="@color/White150"
+        android:backgroundTint="@color/White"
         android:orientation="horizontal">
 
         <ImageView
@@ -36,23 +35,11 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
-        <!--<ImageView
-            android:id="@+id/massages"
-            android:layout_width="23dp"
-            android:layout_height="23dp"
-            app:tint="@color/DarkBlue300"
-            android:src="@drawable/messages"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:clickable="true"
-            android:layout_marginEnd="20dp"
-            />-->
-
         <ImageButton
+            android:id="@+id/massages"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:scaleType="fitCenter"
-            android:id="@+id/massages"
             android:layout_marginEnd="8dp"
             android:layout_alignParentEnd="true"
             android:backgroundTint="@android:color/transparent"
@@ -75,47 +62,40 @@
 
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/relativeLayout1">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout"
+        <RelativeLayout
+            android:id="@+id/RelativeLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/DarkBlue500"
-            android:orientation="vertical"
-            android:paddingBottom="60dp">
+            android:background="@color/DarkBlue400"
+            android:orientation="vertical">
 
-
-
-
-
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/textView_open_massages_activity"
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/searchView"
+                android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:layout_marginEnd="12dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginBottom="15dp"
                 android:background="@drawable/blue_bg"
                 android:backgroundTint="@color/White"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"
-                android:text="See Requests"
-                android:textColor="@color/DarkBlue300"
-                android:textSize="11sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:drawableRight="@drawable/green_search"
+                android:hint="search for attractive deals"
+                android:padding="14dp" />
 
             <HorizontalScrollView
                 android:id="@+id/horizontalScrollView"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="60dp"
                 android:scrollIndicators="none"
                 android:scrollbars="none"
-                app:layout_constraintBottom_toTopOf="@+id/home_recycler_view"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
+                android:layout_marginBottom="20dp"
+                android:layout_below="@+id/searchView">
 
                 <RadioGroup
                     android:id="@+id/radio_group_register_gender"
@@ -189,48 +169,31 @@
                         android:text="  Plot"
                         android:textColor="@drawable/home_radio_text_selector" />
 
-
                 </RadioGroup>
             </HorizontalScrollView>
 
-            <TextView
-                android:id="@+id/searchView"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_margin="15dp"
-                android:background="@drawable/blue_bg"
-                android:backgroundTint="@color/White"
-                android:drawableRight="@drawable/green_search"
-                android:hint="search for attractive deals"
-                android:padding="14dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
 
-
-            <ProgressBar
-                android:id="@+id/progressBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/home_recycler_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="234dp"
-                android:background="@drawable/home_upper_corner_round_white"
-                android:paddingTop="12dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/constraintLayout" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
+        </RelativeLayout>
 
     </ScrollView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/home_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/scrollView"
+        android:paddingTop="5dp" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="160dp"
+        android:layout_below="@+id/scrollView"/>
+
+
+
+
 </RelativeLayout>
 
