--- a/app/src/main/res/layout/activity_my_posts_on_profile.xml
+++ b/app/src/main/res/layout/activity_my_posts_on_profile.xml
@@ -80,7 +80,7 @@
                 android:layout_marginBottom="8dp"
                 android:textAlignment="center"
                 android:textColor="@color/DarkBlue200"
-                android:lines="3"/>
+                android:maxLines="3"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
