--- a/app/src/main/res/layout/one_post_home_rv.xml
+++ b/app/src/main/res/layout/one_post_home_rv.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/White"
         android:background="@drawable/green_bg_text"
-        android:layout_margin="6dp"
+        android:layout_margin="8dp"
         android:padding="5dp">
 
         <LinearLayout
@@ -40,7 +40,7 @@
                         android:id="@+id/post_seller_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/black"
+                        android:fontFamily="@font/poppins_semibold"
                         android:text="Anil Yadav"
                         android:paddingStart="8dp"
                         android:paddingEnd="8dp" />
@@ -69,7 +69,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:textColor="@color/Green300"
-                        android:fontFamily="sans-serif-medium"
+                        android:fontFamily="@font/poppins_semibold"
                         android:text="Send Request"/>
 
                 <ImageView
@@ -86,43 +86,98 @@
             </LinearLayout>
 
 
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/post_image_from_database"
+            <HorizontalScrollView
                 android:layout_width="match_parent"
-                android:layout_height="230dp"
-                android:scaleType="centerCrop"
-                app:shapeAppearanceOverlay="@style/RoundedSquare"
-                android:background="@color/DarkBlue200"
-                />
+                android:layout_height="wrap_content"
+                android:scrollIndicators="none"
+                android:scrollbars="none"
+                android:contentDescription="homes">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:id="@+id/post_image_from_database1"
+                        android:layout_width="330dp"
+                        android:layout_height="230dp"
+                        android:scaleType="centerCrop"
+                        android:layout_marginEnd="2dp"
+                        app:shapeAppearanceOverlay="@style/RoundedSquare"
+                        android:background="@color/DarkBlue200"
+                        />
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:id="@+id/post_image_from_database2"
+                        android:layout_width="330dp"
+                        android:layout_height="230dp"
+                        android:scaleType="centerCrop"
+                        android:layout_marginEnd="2dp"
+                        app:shapeAppearanceOverlay="@style/RoundedSquare"
+                        android:background="@color/DarkBlue200"
+                        />
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:id="@+id/post_image_from_database3"
+                        android:layout_width="330dp"
+                        android:layout_height="230dp"
+                        android:scaleType="centerCrop"
+                        android:layout_marginEnd="2dp"
+                        app:shapeAppearanceOverlay="@style/RoundedSquare"
+                        android:background="@color/DarkBlue200"
+                        />
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:id="@+id/post_image_from_database4"
+                        android:layout_width="330dp"
+                        android:layout_height="230dp"
+                        android:layout_marginEnd="2dp"
+                        android:scaleType="centerCrop"
+                        app:shapeAppearanceOverlay="@style/RoundedSquare"
+                        android:background="@color/DarkBlue200"
+                        />
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:id="@+id/post_image_from_database5"
+                        android:layout_width="330dp"
+                        android:layout_height="230dp"
+                        android:layout_marginEnd="2dp"
+                        android:scaleType="centerCrop"
+                        app:shapeAppearanceOverlay="@style/RoundedSquare"
+                        android:background="@color/DarkBlue200"
+                        />
+
+                </LinearLayout>
+
+            </HorizontalScrollView>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:layout_width="18dp"
-                    android:layout_height="18dp"
-                    android:paddingTop="5dp"
-                    android:src="@drawable/rupee"/>
                 <TextView
                     android:id="@+id/post_price"
                     android:layout_width="wrap_content"
                     android:layout_height="26dp"
                     android:layout_weight="2"
-                    android:textSize="18dp"
+                    android:layout_gravity="center_vertical"
+                    android:text="₹ 6.2 Cr"
+                    android:paddingTop="3dp"
+                    android:textSize="15dp"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:textColor="@color/DarkBlue400"
                     android:hint="@string/loading" />
                 <ImageView
                     android:id="@+id/post_save"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
+                    android:layout_marginTop="2dp"
                     android:layout_marginEnd="10dp"
                     android:src="@drawable/heart_outline" />
                 <ImageView
                     android:id="@+id/post_share"
                     android:layout_width="28dp"
-                    android:layout_height="28dp"
+                    android:layout_height="27dp"
                     android:layout_marginEnd="10dp"
                     android:src="@drawable/share" />
 
@@ -134,7 +189,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="26dp"
                 android:hint="@string/loading"
-                android:textSize="18sp"/>
+                android:fontFamily="@font/poppins_regular"
+                android:textSize="16sp"/>
 
             <TextView
                 android:id="@+id/post_address"
@@ -151,12 +207,13 @@
                     android:id="@+id/post_carpet_area"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="4dp"
+                    android:padding="2dp"
                     android:gravity="center"
                     android:drawablePadding="4dp"
                     android:text="5200 Sqft."
-                    android:backgroundTint="#303030"
-                    android:textSize="11sp"
+                    android:backgroundTint="#C4000000"
+                    android:textSize="10sp"
+                    android:fontFamily="@font/poppins_regular"
                     android:layout_marginEnd="5dp"
                     android:background="@drawable/green_bg_text"
                     android:textColor="@color/White"
@@ -167,13 +224,14 @@
                     android:id="@+id/post_status"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="4dp"
+                    android:padding="2dp"
                     android:gravity="center"
                     android:text="Semi-fernished"
+                    android:fontFamily="@font/poppins_regular"
                     android:layout_marginEnd="8dp"
                     android:layout_toEndOf="@id/post_carpet_area"
-                    android:backgroundTint="#303030"
-                    android:textSize="11sp"
+                    android:backgroundTint="#C4000000"
+                    android:textSize="10sp"
                     android:drawablePadding="4dp"
                     app:drawableStartCompat="@drawable/dot"
                     android:background="@drawable/green_bg_text"
@@ -188,7 +246,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginBottom="116dp"
+        android:layout_marginTop="258dp"
         android:background="@drawable/green_bg_text"
         android:backgroundTint="@color/White"
         android:drawablePadding="4dp"
@@ -199,8 +257,8 @@
         android:textColor="#F03E3E3E"
         android:textSize="11sp"
         app:drawableStartCompat="@drawable/dot"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/linearLayout" />
+        app:layout_constraintStart_toStartOf="@+id/linearLayout"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
