--- a/app/src/main/res/layout/one_saved_item_rv.xml
+++ b/app/src/main/res/layout/one_saved_item_rv.xml
@@ -30,6 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
+            android:maxLines="2"
             android:hint="Property Name"
             android:textSize="16sp"
             android:textColor="@color/DarkBlue500"/>
@@ -38,6 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Property Address"
+            android:maxLines="2"
             android:layout_marginTop="5dp"
             android:textSize="14sp"/>
         <TextView
