--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -10,46 +10,134 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/choose_post_image_to_upload"
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/choose_post_image_to_upload1"
+                        android:layout_width="128dp"
+                        android:layout_height="96dp"
+                        android:layout_margin="6dp"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="15dp"
+                        android:background="@color/DarkBlue300"
+                        android:contentDescription="ImageView to Display Pic"
+                        android:src="@drawable/app_logo_one"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/choose_post_image_to_upload2"
+                        android:layout_width="128dp"
+                        android:layout_height="96dp"
+                        android:layout_margin="6dp"
+                        android:layout_marginStart="1dp"
+                        android:layout_marginTop="12dp"
+                        android:background="@color/DarkBlue300"
+                        android:contentDescription="ImageView to Display Pic"
+                        android:src="@drawable/app_logo_one"
+                        app:layout_constraintStart_toEndOf="@+id/choose_post_image_to_upload1"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/choose_post_image_to_upload3"
+                        android:layout_width="128dp"
+                        android:layout_height="96dp"
+                        android:layout_margin="6dp"
+                        android:layout_marginStart="1dp"
+                        android:layout_marginTop="11dp"
+                        android:background="@color/DarkBlue300"
+                        android:contentDescription="ImageView to Display Pic"
+                        android:src="@drawable/app_logo_one"
+                        app:layout_constraintStart_toEndOf="@+id/choose_post_image_to_upload2"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/choose_post_image_to_upload4"
+                        android:layout_width="128dp"
+                        android:layout_height="96dp"
+                        android:layout_margin="6dp"
+                        android:layout_marginStart="188dp"
+                        android:layout_marginTop="22dp"
+                        android:background="@color/DarkBlue300"
+                        android:contentDescription="ImageView to Display Pic"
+                        android:src="@drawable/app_logo_one"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/choose_post_image_to_upload1" />
+
+                    <ImageView
+                        android:id="@+id/choose_post_image_to_upload5"
+                        android:layout_width="128dp"
+                        android:layout_height="96dp"
+                        android:layout_margin="6dp"
+                        android:layout_marginStart="12dp"
+                        android:layout_marginTop="14dp"
+                        android:background="@color/DarkBlue300"
+                        android:contentDescription="ImageView to Display Pic"
+                        android:src="@drawable/app_logo_one"
+                        app:layout_constraintStart_toEndOf="@+id/choose_post_image_to_upload4"
+                        app:layout_constraintTop_toBottomOf="@+id/choose_post_image_to_upload2" />
+
+                    <ImageView
+                        android:id="@+id/choose_post_image_to_upload6"
+                        android:layout_width="128dp"
+                        android:layout_height="96dp"
+                        android:layout_margin="6dp"
+                        android:layout_marginStart="6dp"
+                        android:layout_marginTop="6dp"
+                        android:background="@color/DarkBlue300"
+                        android:contentDescription="ImageView to Display Pic"
+                        android:src="@drawable/app_logo_one"
+                        app:layout_constraintStart_toEndOf="@+id/choose_post_image_to_upload5"
+                        app:layout_constraintTop_toBottomOf="@+id/choose_post_image_to_upload3" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            <Button
+                android:id="@+id/ImgChooseBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ImgChooseBtn"/>
+
+
+
+            <EditText
                 android:layout_width="match_parent"
-                android:layout_height="500dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/border"
-                android:contentDescription="ImageView to Display Pic" />
+                android:layout_height="50dp"
+                android:id="@+id/editText_post_name"
+                android:hint="Enter Property Name"
+                android:layout_marginTop="20dp"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:id="@+id/editText_post_location"
+                android:hint="Enter Property location"
+                android:layout_marginTop="20dp"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:id="@+id/editText_post_price"
+                android:hint="Enter Property Price"
+                android:layout_marginTop="20dp"/>
+
+            <Button
+                android:id="@+id/upload_post_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Post" />
 
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:id="@+id/editText_post_name"
-        android:hint="Enter Property Name"
-        android:layout_marginTop="20dp"/>
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:id="@+id/editText_post_location"
-        android:hint="Enter Property location"
-        android:layout_marginTop="20dp"/>
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:id="@+id/editText_post_price"
-        android:hint="Enter Property Price"
-        android:layout_marginTop="20dp"/>
-
-    <Button
-        android:id="@+id/upload_post_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Post" />
-
-
-</LinearLayout>
+        </LinearLayout>
     </ScrollView>
 
 </FrameLayout>
