--- a/app/src/main/res/layout/one_post_home_rv.xml
+++ b/app/src/main/res/layout/one_post_home_rv.xml
@@ -143,6 +143,16 @@
                         app:shapeAppearanceOverlay="@style/RoundedSquare"
                         android:background="@color/DarkBlue200"
                         />
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:id="@+id/post_image_from_database6"
+                        android:layout_width="330dp"
+                        android:layout_height="230dp"
+                        android:layout_marginEnd="2dp"
+                        android:scaleType="centerCrop"
+                        app:shapeAppearanceOverlay="@style/RoundedSquare"
+                        android:background="@color/DarkBlue200"
+                        />
+
 
                 </LinearLayout>
 
