property details page added but there are more work is panding.

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -54,7 +54,7 @@
                 android:layout_marginTop="-50dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginBottom="15dp"
-                android:background="@drawable/border"
+                android:background="@drawable/grey_stoke_border"
                 android:padding="15dp">
 
 
@@ -63,7 +63,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:background="@drawable/border">
+                    android:background="@drawable/grey_stoke_border">
 
                     <ImageView
                         android:id="@+id/imageViewEmail"
