--- a/app/src/main/res/layout/activity_massages.xml
+++ b/app/src/main/res/layout/activity_massages.xml
@@ -14,7 +14,6 @@
         android:layout_height="46dp"
         android:background="@color/DarkBlue100"
         android:orientation="horizontal"
-        android:layout_marginBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -23,35 +22,119 @@
             android:id="@+id/backBtn"
             android:layout_width="22dp"
             android:layout_height="16dp"
-            android:layout_marginStart="10dp"
-            app:tint="@color/DarkBlue500"
             android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
             android:scaleX="-1"
-            android:src="@drawable/angle_right" />
+            android:src="@drawable/angle_right"
+            app:tint="@color/DarkBlue500" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="14dp"
             android:layout_centerVertical="true"
-            android:text="Massages and Requests"
+            android:layout_marginStart="14dp"
             android:layout_toRightOf="@+id/backBtn"
+            android:text="Massages and Requests"
             android:textColor="@color/DarkBlue500"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
 
         <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/waiting"
-            app:tint="@color/DarkBlue300"
+            android:id="@+id/img_show_requests"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:clickable="true"
             android:layout_marginEnd="24dp"
+            android:clickable="true"
+            android:contentDescription="TODO"
             android:scaleX="-1"
-            />
+            android:src="@drawable/waiting"
+            app:tint="@color/DarkBlue300" />
 
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/tv_show_requests"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_semibold"
+        android:text="Requests"
+        android:textSize="16dp"
+        android:textColor="@color/my_light_primary"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout_show_requests"
+        android:layout_width="350dp"
+        android:layout_height="2dp"
+        android:layout_marginStart="10dp"
+        android:background="@color/my_light_primary"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_show_requests"
+        android:orientation="horizontal" />
+
+    <ImageView
+        android:id="@+id/img_show_requests_arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="18dp"
+        android:layout_marginTop="30dp"
+        android:rotation="90"
+        android:src="@drawable/angle_right"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout_show_requests"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
+        app:tint="@color/my_light_primary" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/requests_recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout_show_requests" />
+
+    <TextView
+        android:id="@+id/tv_show_massages"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/poppins_semibold"
+        android:layout_marginStart="12dp"
+        android:text="Massages"
+        android:textColor="@color/my_light_primary"
+        android:textSize="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/requests_recyclerView" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout6"
+        android:layout_width="350dp"
+        android:layout_height="2dp"
+        android:layout_marginStart="10dp"
+        android:background="@color/my_light_primary"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_show_massages" />
+
+    <ImageView
+        android:id="@+id/img_show_massages_arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="18dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="15dp"
+        android:rotation="90"
+        android:src="@drawable/angle_right"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout6"
+        app:layout_constraintTop_toBottomOf="@+id/requests_recyclerView"
+        app:tint="@color/my_light_primary" />
 
     <LinearLayout
         android:id="@+id/no_massages_view"
@@ -117,9 +200,11 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="10dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
