--- a/app/src/main/res/layout/one_item_each_requests.xml
+++ b/app/src/main/res/layout/one_item_each_requests.xml
@@ -46,35 +46,26 @@
             android:id="@+id/massage_activity_sender_last_massage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Last Massage"
+            android:text="Requested for Rent"
             android:textSize="11sp"
-            app:layout_constraintEnd_toEndOf="@+id/requests_activity_sender_name"
             app:layout_constraintStart_toStartOf="@+id/requests_activity_sender_name"
             app:layout_constraintTop_toBottomOf="@+id/requests_activity_sender_name" />
 
-        <TextView
-            android:id="@+id/massage_activity_send_time"
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_view_sender_details"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="12dp"
-            android:layout_marginBottom="13dp"
-            android:text="4 day ago"
-            android:textColor="@color/my_light_primary"
-            android:textSize="10sp"
-            app:layout_constraintBottom_toTopOf="@+id/view"
-            app:layout_constraintEnd_toEndOf="parent" />
-
-        <View
-            android:id="@+id/view"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="5dp"
+            android:layout_height="42dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="28dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/blue_stoke_square"
+            android:text="View"
+            android:textColor="@color/DarkBlue300"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/requests_activity_sender_dp" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
