request for chat Customtom dialog  and accept it implenented

--- a/app/src/main/res/layout/activity_chat_screen.xml
+++ b/app/src/main/res/layout/activity_chat_screen.xml
@@ -65,6 +65,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/linearLayout2"
+        android:layout_above="@+id/linearLayout_typing"
         android:padding="12dp"/>
 
 <!--
